testdata/asm/invalid/div_04.zkasm
;;error:3:3-15:remainder bit overflow (u16 into u15)
fn div(x u16, y u16) -> (q u16, r u15) {
  q, r = x / y
  return
}
